[package]
name = "docker-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
walkdir = "2.4.0"
bollard = "0.15.0"
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.30"
chrono = "0.4.31"
serde_yaml = "0.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = 'abort'  # Уменьшает размер бинарного файла
strip = true     # Автоматически удаляет отладочные символы 